--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,7 +125,7 @@ footer .logo-30MAmis:hover
 {
     border: none;
     background-color: #0984e3;
-    color: white;
+    color: white !important;
     padding: 7px;
     display: inline-block;
     text-decoration: none;
