--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,10 @@ footer
 {
     position: relative;
     width: 100%;
-    background-color: #007BFF;
+    background-image: url('http://localhost/images/beach-dog.jpg');
+    background-position: 100% 50%;
+    opacity: 0.9;
+    background-size: cover;
     color: white;
 }
 
@@ -71,7 +74,7 @@ footer a:visited
 
 footer a:hover
 {
-    color: #273c75;
+    color: #9bafe2;
     text-decoration: none;
 }
 
@@ -477,7 +480,22 @@ footer .logo-30MAmis:hover
 
 .main-profile
 {
-    margin-left: 350px;
+    margin-top: 10px;
+    /* margin-left: 350px; */
+    background-color: #FBFBFB;
+}
+
+.main-profile i
+{
+    font-size: 25px;
+}
+
+.container-profile
+{
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    background-color: white;
 }
 
 .profile-show
@@ -487,7 +505,7 @@ footer .logo-30MAmis:hover
 
 .avatar
 {
-    object-fit: contain;
+    object-fit: cover;
     width: 300px;
     height: 300px;
 }
@@ -503,9 +521,19 @@ footer .logo-30MAmis:hover
     margin-bottom: 40px;
 }
 
+.btn-edit-member
+{
+    color: black;
+}
+
+.fa-check
+{
+    color: green;
+}
+
 .main-profile .link-article-page
 {
-    margin-top: 30px;
+    margin: 20px 0 10px 60px;
 }
 
 .btn-delete-member
