--- a/public/css/articles-forum-mentionslegales.css
+++ b/public/css/articles-forum-mentionslegales.css
@@ -42,14 +42,17 @@
     padding-top: 40px;
 }
 
-.main-article i
+.main-article i,
+.main-forum i
 {
     font-size: 20px;
     color: #0984e3;
 }
 
 .btn-delete-article,
-.icone-delete-article
+.btn-delete-post,
+.icone-delete-article,
+.icone-delete-post
 {
     top: 0;
     left: 0;
@@ -58,7 +61,8 @@
     transform: translateX(25%);
 }
 
-.btn-delete-article
+.btn-delete-article,
+.btn-delete-post
 {
     opacity: 0;
     z-index: 1;
@@ -126,14 +130,6 @@ ion-icon[name=heart-empty]
     padding: 0;
 }
 
-.article-page .like-article a label
-{
-    padding: 7px;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
-
 /* Dynamics comments, article page + post page + edit member profile */
 
 .form-edit-comment,
@@ -157,13 +153,16 @@ ion-icon[name=heart-empty]
 
 /* --- */
 
-.container-comment-article
+.container-comment-article,
+.container-comment-post
 {
     position: relative;
 }
 
 .icone-comment-article,
-.btn-comment-article
+.icone-comment-post,
+.btn-comment-article,
+.label-comment-post
 {
     top: 0;
     left: 0;
@@ -172,10 +171,16 @@ ion-icon[name=heart-empty]
     position: absolute;
 }
 
-.btn-comment-article
+.btn-comment-article,
+.label-comment-post
 {
     z-index: 1;
     cursor: pointer;
+}
+
+.btn-comment-article
+{
+    width: 20px;
 }
 
 .container-delete-comment,
@@ -243,8 +248,7 @@ ion-icon[name=heart-empty]
     margin-left: 20px;
 }
 
-.article-page .form-comment-article,
-.forum-page .form-comment-post
+.article-page .form-comment-article
 {
     margin-top: 80px !important;
 }
