--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -121,7 +121,7 @@
     font-weight: 100;
 }
 
-.article-box .text-article
+.article-box .text-article *
 {
     font-size: 18px;
     font-weight: 100;
@@ -133,4 +133,9 @@
     position: fixed;
     bottom: 0;
     right: 0;
+}
+
+.article-box .text-article ul
+{
+    margin-left: 18px;
 }
