changement accès site host windows + lien code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,7 +54,7 @@ footer
 {
     position: relative;
     width: 100%;
-    background-image: url('http://localhost/images/beach-dog.jpg');
+    background-image: url('http://lesnacs.fr/images/beach-dog.jpg');
     background-position: 100% 50%;
     opacity: 0.9;
     background-size: cover;
